--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "victory": "^36.6.11"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.6",
